@@ -1,3 +1,8 @@
+2012-09-05  Daniel Richard. G <danielg at teragram dot com>
+
+	* implement.h: whitespace adjustment.
+	* dll.c: Facilitate PTW32_STATIC_LIB being defined in a header file.
+
 2012-09-04  Ross Johnson <ross dot johnson at homemail dot com dot au>
 
 	* Makefile (VCEFLAGS): Changed from /EHsc to /EHs which fixed a problem
